replace guava with java 8 style